// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ButtonOLD Button 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button"
        disabled={false}
        id={null}
        onClick={[Function]}
        type="button"
        value="Save as draft"
      />
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button govuk-button--disabled"
        disabled={true}
        id={null}
        onClick={[Function]}
        type="button"
        value="Delete"
      />
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled Submit 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button govuk-button--disabled"
        disabled={true}
        id={null}
        onClick={null}
        type="submit"
        value="Delete"
      />
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled Warning 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button govuk-button--disabled govuk-button--warning"
        disabled={true}
        id={null}
        onClick={null}
        type="submit"
        value="Delete"
      />
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Link 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <a
        aria-current="page"
        className="govuk-button active"
        data-module="govuk-button"
        draggable={false}
        forceExternal={false}
        href="/"
        id={null}
        onClick={[Function]}
        role="button"
        style={Object {}}
        title={null}
      >
        Continue
      </a>
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Secondary 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button govuk-button--secondary"
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Save as draft"
      />
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Standard 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button"
        disabled={false}
        id={null}
        onClick={null}
        type="button"
        value="Save as draft"
      />
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Start 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <a
        aria-current="page"
        className="govuk-button--start govuk-button active"
        data-module="govuk-button"
        draggable={false}
        forceExternal={false}
        href="/"
        id={null}
        onClick={[Function]}
        role="button"
        style={Object {}}
        title={null}
      >
        Start now
        <svg
          className="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Submit 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button"
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Save and continue"
      />
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Warning 1`] = `
<div
  id="story-root"
  style={
    Object {
      "backgroundColor": "white",
      "padding": "1em",
    }
  }
>
  <div
    className="nguk-page__body"
    style={
      Object {
        "margin": 0,
        "padding": 0,
      }
    }
  >
    <main
      className="govuk-main-wrapper"
      style={
        Object {
          "margin": 0,
          "padding": 0,
        }
      }
    >
      <input
        className="govuk-button govuk-button--warning"
        disabled={false}
        id={null}
        onClick={null}
        type="submit"
        value="Delete"
      />
    </main>
  </div>
</div>
`;
